# ncsw-data

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yaml  setup.cfg
.github/workflows/: docs.yml
case_study/: environment.yaml
case_study/notebooks/: a_quantitative_analysis.ipynb  a_quantitative_analysis.sql  b_qualitative_analysis.ipynb
case_study/notebooks/.ipynb_checkpoints/: a_quantitative_analysis-checkpoint.ipynb
case_study/scripts/: a_download_extract_and_format_data.py  b_insert_archive_data.py  c_migrate_archive_to_workbench_data.py  d_update_workbench_data.py
docs/source/: conf.py  index.rst
ncsw_data/: __init__.py
ncsw_data/source/: __init__.py
ncsw_data/source/abstract_base/: __init__.py  abstract_base.py
ncsw_data/source/base/: __init__.py  base.py
ncsw_data/source/compound/: __init__.py  compound.py
ncsw_data/source/compound_pattern/: __init__.py  compound_pattern.py
ncsw_data/source/reaction/: __init__.py  reaction.py  uspto.py
ncsw_data/source/reaction_pattern/: __init__.py  reaction_pattern.py
ncsw_data/storage/: __init__.py
references/: 20201029_irwin_j_j_et_al.md  20231102_zdrazil_b_et_al.md
scripts/: download_extract_and_format_data.py
use_case/: environment.yaml
use_case/notebooks/: b_quantitative_analysis.sql
use_case/scripts/: a_download_extract_and_format_data.py  b_insert_archive_data.py  c_migrate_archive_to_workbench_data.py  d_update_workbench_data.py  download_extract_and_format_data.py  insert_archive_data.py  migrate_archive_to_workbench_data.py  update_workbench_data.py
(+218 files in other folders)
