[metadata]
name = ncsw_data
version = 2025.9.1
author = Haris Hasic
description = The NeoChemSynthWave: Data project.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords =
    chemical-compound-patterns,
    chemical-compounds,
    chemical-reaction-patterns,
    chemical-reactions,
    chemical-synthesis,
    data,
    data-source,
    database,
    dataset,
    retrosynthesis,
    retrosynthetic-analysis,
    synthesizability,
    synthetic-accessibility,
    synthetic-complexity

[options]
packages = find:

[options.packages.find]
include = ncsw_data*
